<resources>
    <!--    globales    -->

    <string name="app_name">Lemone</string>
    <string name="msj_presentacion">Sistema de Gestion de Stock para Vinotecas</string>

    <!--    login    -->

    <string name="msj_contacto">Contacto</string>
    <string name="msj_acerca_de">Acerca de</string>
    <string name="usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="msj_login">Ingrese con su cuenta</string>
    <string name="msj_btn_ingresar">Ingresar</string>
    <string name="login_pass_olvidada">¿Olvidó su contraseña?</string>
    <string name="btnGestionUs">Gestión de usuarios</string>
    <string name="btnGestionProv">Gestión de proovedores</string>
    <string name="btnGestionProducto">Gestión de productos</string>
    <string name="btnInforme">Generar informe</string>
    <string name="btnInformeStock">Generar informe de stock mínimo</string>
    <string name="btnSalir">Salir</string>
    <string name="btnGuardar">Guardar</string>
    <string name="btnEliminar">Eliminar</string>
    <string name="tituloAgregarProducto">Agregar Producto</string>
    <string name="tituloAgregarUsuario">Crear cuenta de usuario</string>
    <!--        -->

    <!--   edit product     -->
    <string name="tituloEditarProducto">Editar Producto</string>
    <string name="subtitulo">Sistema de Gestión de Stock para Vinotecas</string>
    <!--   find product     -->
    <string name="tituloConsultaProducto">Consulta de productos</string>
    <string name="btnBuscar">Buscar</string>
    <string name="tituloNombreProducto">Vino Tinto Chateau Les Martineaux</string>
    <string name="presentacioProducto">Botella 1 L</string>
    <string name="precioProducto">$ 3000</string>
    <string name="stockProducto">Stock: 500 u.</string>
    <string name="activar">Activar</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="btnAgregarProd">+ Agregar producto</string>
    <!--        -->

    <!--   add providers & add consumers    -->
    <string name="editNombre">Nombre</string>
    <string name="editApellido">Apellido</string>
    <string name="editDni">Tipo de documento</string>
    <string name="editNumDni">Nro. de documento</string>
    <string name="editContacto">Datos de contacto</string>
    <string name="editPhone">Telefono</string>
    <string name="editMail">Email</string>

    <!--   Acerca De    -->
    <string name="msj_btn_regresar">Menu Principal</string>
    <string name="titulo">Lemone</string>
    <string name="msj_textoacercade">Sistema de Gestion de Stock para Vinotecas, permite al usuario realizar control de Stock de sus mercaderias ahora en version movil</string>
    <!--  -->

    <!--   Contacto    -->
    <string name="msj_btn_enviar">Enviar</string>
    <string name="msj_textomensaje">Dejanos tu mensaje</string>

    <string name="msj_nombreyapellido">Nombre y Apellido</string>
    <string name="msj_celular">Celular</string>
    <string name="msj_textoemail1">E-mail</string>
    <string name="msj_mensajetextoamplio">Mensaje</string>

    <string name="msj_textotelefono">Telefono</string>
    <string name="msj_nrotelefono">1234567</string>
    <string name="msj_textoemail">E-mail</string>
    <string name="msj_email">info@lemone.com</string>
    <string name="msj_textohelp">HelpDesk</string>
    <string name="msj_help">http://lemonehelpdesk.com</string>


    <!-- -->

    <!--   Activar/Desactivar Producto    -->
    <string name="act_desact_prod">¿Está seguro de que desea desactivar / activar el producto?</string>
    <string name="editar_usuario">Editar usuario</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>


</resources>
