<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/crema"
    tools:context=".activities.MenuPrincipalUsuarioComun">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/app_name"
        android:textColor="@color/bordo"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.714"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="236dp"
        android:text="Bienvenido"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="109dp"
        android:layout_height="160dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.175"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_lemone" />


    <Button
        android:id="@+id/buttonProductos"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="324dp"
        android:backgroundTint="@color/bordo"
        android:insetTop="10dp"
        android:insetBottom="10dp"
        android:text="@string/btnGestionProducto"
        android:textColor="@color/crema"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:iconPadding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonInforme"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="152dp"
        android:backgroundTint="@color/bordo"
        android:insetTop="10dp"
        android:insetBottom="10dp"
        android:text="@string/btnInforme"
        android:textColor="@color/crema"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:iconPadding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonProductos"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonInformeStock"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:backgroundTint="@color/bordo"
        android:insetTop="10dp"
        android:insetBottom="10dp"
        android:text="@string/btnInformeStock"
        android:textColor="@color/crema"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:iconPadding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonInforme"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonSalir"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/bordo"
        android:insetTop="10dp"
        android:insetBottom="10dp"
        android:text="@string/btnSalir"
        android:textColor="@color/crema"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:iconPadding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonProductos"
        app:layout_constraintVertical_bias="0.775" />


</androidx.constraintlayout.widget.ConstraintLayout>

