<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/crema"
    tools:context=".activities.BuscarProducto">

    <!--   FLECHA VOLVER ATRAS -->


    <!--    LEMONE -->

    <FrameLayout
        android:id="@+id/btn_volverFP"
        android:layout_width="48dp"
        android:layout_height="42dp"
        android:background="@drawable/elemento_esquina_redondeada"
        android:elevation="2dp"
        app:circularflow_radiusInDP="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023">

        <ImageView
            android:id="@+id/imageViewAtras"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:src="@drawable/back_arrow_white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="#FFFFFF" />
    </FrameLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/app_name"
        android:textColor="@color/bordo"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.739"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    LOGO-->

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="109dp"
        android:layout_height="160dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.298"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_lemone" />

    <!--   SUBTITULO -->
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/subtitulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <!--    TITULO CONSULTA DE PRODUCTOS-->

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="196dp"
        android:text="@string/tituloConsultaProducto"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    BARRA DE BUSQUEDA -->
    <EditText
        android:id="@+id/editTextText"
        android:layout_width="260dp"
        android:layout_height="48dp"
        android:layout_marginTop="236dp"
        android:ems="10"
        android:hint="Filtro de búsqueda"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/gris"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    BOTON DE BUSQUEDA -->
    <Button
        android:id="@+id/buttonBuscarFP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="232dp"
        android:backgroundTint="@color/bordo"
        android:text="@string/btnBuscar"
        android:textColor="@color/crema"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:iconPadding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.609"
        app:layout_constraintStart_toEndOf="@+id/editTextText"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    IMAGEN BOTELLA -->

    <!--    INFO DEL PRODUCTO -->


    <!--    STOCK -->

    <!--    BOTON + -  -->

    <Button
        android:id="@+id/btn_agregarFP"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="383dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/white"
        android:text="@string/btnAgregarProd"
        android:textColor="@color/bordo"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:iconPadding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/listViewProductos" />

    <ListView
        android:id="@+id/listViewProductos"
        android:layout_width="382dp"
        android:layout_height="368dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.655"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>